Updated homepage with GitHub, Resume

--- a/index.html
+++ b/index.html
@@ -9,15 +9,31 @@
 	</head>
 	<body>
 		<div id="header"> <h1>Andrew Chan</h1> </div>
-
-		<div id="star"><a id="link" style="color: white" href="http://www.andrewcomputerprogramming.webs.com"><img src="images/EightPointedStar.png" /></a></div>
-        <div id="meltStar"><a href="http://chana.site88.net/MeltStar/meltstar.html"><img src="images/title.png" /></a></div>
-		<div id="acknowledgements"><a href="">Acknowledgments</a><div>
-		<div id="p"><br>Special thanks to my high school programming teacher, <a href="http://www.codecademy.com"> Codecademy </a> for teaching me HTML/CSS and Javascript, and Gyrostorms's YouTube tutorials on <a href="http://www.youtube.com/playlist?list=PL290A4D2398C97186"> HTML5 Game Development.</a></p></div>
-		<div id="coding"><a href="Subpages/coding.html">CODING</a></div>
-		<div id="games"><a href="Subpages/games.html">GAMES</a></div>
-		<div id="divider"></div>
-		<div id="ee"><a href="Subpages/ee.html">EE</a></div>
-		<div id="science"><a href="Subpages/science.html">SCIENCE</a></div>
+		
+		<table id="linkTable">
+			<tr>
+				<td>
+					<div id="meltStarContainer">
+						<div id="meltStar">
+							<a href="http://chana.site88.net/MeltStar/meltstar.html">
+								<img id ="meltStarImg" src="images/title.png"/>
+							</a>
+						</div>
+					</div>
+				</td>
+				<td>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<div class="boxLink"><a href="https://github.com/Anisotropies"><div class="box">GitHub</div></a></div>
+				</td>
+				<td>
+					<div class="boxLink"><a href="Subpages/Andrew C. Chan Resume 20171107.docx.pdf"><div class="box">RESUME</div></a></div>
+				</td>
+			
+				
+			</tr>
+		</table>
 	</body>
 </html>
