--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="homePage.js"></script>
 	</head>
 	<body>
-		<div id="header"> <h1>Andrew C. Chan</h1> </div>
+		<div id="header"> <h1>Andrew Chan</h1> </div>
 		
 		<table id="linkTable">
 			<tr>
