Test alert--still not working!

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<title>Home</title>
 		<link type="text/css" rel="stylesheet" href="homePage.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-		<script type="text/javascript" src="homePage.js"></script>
+		<!--<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
+        <script type="text/javascript" language="javascript" src="homePage.js"></script>
+		
 	</head>
 	<body>
 		<div id="header"> <h1>Andrew Chan</h1> </div>
