Add chart via chart.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link type="text/css" rel="stylesheet" href="homePage.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<!--<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
         <script type="text/javascript" language="javascript" src="homePage.js"></script>
 		
 	</head>
@@ -23,7 +24,7 @@
 					</div>
 				</td>
 				<td>
-<button type="submit" onclick="UserAction()">REST</button>
+
 				</td>
 			</tr>
 			<tr>
@@ -37,5 +38,12 @@
 				
 			</tr>
 		</table>
+
+<div id="chartBckgnd">
+
+<canvas id="myChart"></canvas>
+
+</div>
+
 	</body>
 </html>
