--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div id="Technology" class="tabcontent">
   <h3>Technology</h3>
   <p>Tech Stock Info</p>
+<canvas id="myChart"></canvas>
 </div>
 
 <div id="Food" class="tabcontent">
