Chart resizes to div size, so set div size. Also able to do a simple percent increase calculation https://stackoverflow.com/questions/9453421/how-to-round-float-numbers-in-javascript

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
 <div id="Technology" class="tabcontent">
   <h3>Technology</h3>
-  <p>Tech Stock Info</p>
-<canvas id="myChart"></canvas>
+  <p id = "returnVal"></p>
+  <div id="chartContainer">
+	<canvas id="myChart"></canvas>
+	</div>
 </div>
 
 <div id="Food" class="tabcontent">
