--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home</title>
+		<title>Historial % Return</title>
 		<link type="text/css" rel="stylesheet" href="homePage.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<!--<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
         <script type="text/javascript" language="javascript" src="homePage.js"></script>
 	</head>
 <body>
@@ -21,10 +21,16 @@
 
 <div id="Technology" class="tabcontent">
   <h3>Technology</h3>
+  
+	<form id = "StartEndForm">
+	<input class = "FormText" id = "StartDate" type="text" name="StartDate" ><br>
+	<input class = "FormText" id = "EndDate" type="text" name="EndDate"><br>
+	<input type="submit" value="Submit">
+	</form>
   <p id = "returnVal"></p>
   <div id="chartContainer">
 	<canvas id="myChart"></canvas>
-	</div>
+  </div>
 </div>
 
 <div id="Food" class="tabcontent">
