--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <h3>Technology</h3>
   
 	<form id = "StartEndForm">
-	<input class = "FormText" id = "StartDate" type="text" name="StartDate" ><br>
-	<input class = "FormText" id = "EndDate" type="text" name="EndDate"><br>
-	<input type="submit" value="Submit">
+	Ticker Symbol: <input class = "FormText" id = "ticker" type="text" name="ticker"><br>
+	Start Date: <input class = "FormText" id = "StartDate" type="text" name="StartDate"><br>
+	End Date: <input class = "FormText" id = "EndDate" type="text" name="EndDate"><br>
 	</form>
   <p id = "returnVal"></p>
   <div id="chartContainer">
