Added favicon and corrected percent return

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Historial % Return</title>
+		<link rel="shortcut icon" href="images/favicon.ico">
 		<link type="text/css" rel="stylesheet" href="homePage.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<!--<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
