--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
 
 	<form id = "StartEndForm">
-	Ticker Symbol: <input class = "FormText" id = "ticker" type="text" name="ticker"><br>
-	Start Date: <input class = "FormText" id = "StartDate" type="text" name="StartDate"><br>
-	End Date: <input class = "FormText" id = "EndDate" type="text" name="EndDate"><br>
+	Ticker Symbol: <input class = "FormText" id = "ticker" type="text" name="ticker" placeholder="FB"><br>
+	Start Date (in YYYY-MM-DD): <input class = "FormText" id = "StartDate" type="text" name="StartDate" placeholder="2017-12-19"><br>
+	End Date (in YYYY-MM-DD): <input class = "FormText" id = "EndDate" type="text" name="EndDate" placeholder="2017-12-26"><br>
 	
 	</form>
 	<div id = "submitButton"> Submit </div>
-  <p id = "returnVal"></p>
+  <div id = "companyName"></div>
+ <div id = "returnVal"></div>
   <div id="chartContainer">
 	<canvas id="myChart"></canvas>
   </div>
