--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 	<canvas id="myChart"></canvas>
   </div>
 
-<div>
-	<h6>Data from <a href="https://www.quandl.com/databases/WIKIP/usage/quickstart/api"> Quandl</a> wiki prices</h6>
-</div>
+<div id = "citationQuandl"></div>
      
 </body>
 </html>
