Added regression curve to display!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!--<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
         <script type="text/javascript" language="javascript" src="homePage.js"></script>
+        <script type="text/javascript" language="javascript" src="testLeastSquares.js"></script>
 	</head>
 <body>
 <div class="Title">
